--- a/index.html
+++ b/index.html
@@ -169,11 +169,19 @@
         </header>
         <section class="team-container">
             <div class="ceo-card">
-                <div class="profile-initial">윤</div>
-                <span style="color:var(--primary-color); font-weight:700;">CEO & Founder</span>
-                <h3 style="font-size: 32px; margin: 10px 0;">윤수원</h3>
-                <p style="color:var(--text-sub); max-width: 500px; margin: 0 auto;">"사소한 불신을 기술로 해결하여, 모든 공용 공간에 평화가 깃들게 하겠습니다."</p>
-            </div>
+    <div class="profile-initial">윤</div>
+    <span style="color:var(--primary-color); font-weight:700; letter-spacing: 1px;">CEO & Founder</span>
+    <h3 style="font-size: 36px; margin: 15px 0; font-weight: 800;">윤수원</h3>
+    <p style="color:var(--text-main); font-size: 18px; font-weight: 600; margin-bottom: 20px;">
+        "의심이 필요 없는 일상을 설계합니다."
+    </p>
+    <p style="color:var(--text-sub); max-width: 600px; margin: 0 auto; line-height: 1.8;">
+        우리는 기술이 인간의 도덕성을 감시하는 것이 아니라, <br>
+        모두가 서로를 믿을 수 있는 환경을 뒷받침해야 한다고 믿습니다. <br>
+        공마고의 도둑들은 기숙사와 오피스 냉장고에서 일어나는 <br>
+        작은 갈등을 해결하고, 진정한 공유의 가치를 실현합니다.
+    </p>
+</div>
             <div class="executive-grid">
                 <div class="member-card"><div class="member-initial">배</div><div class="member-name">배충만 / CTO</div></div>
                 <div class="member-card"><div class="member-initial">이</div><div class="member-name">이시환 / CIO</div></div>
