--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
             --text-sub: #86868b;
             --bg-light: #f5f5f7;
             --white: #ffffff;
+            --header-bg: #1d1d1f; /* 검은색 헤더 배경 */
+            --header-text: #fff; /* 흰색 헤더 텍스트 */
         }
 
         body {
@@ -22,7 +24,7 @@
             word-break: keep-all;
         }
 
-        /* --- 네비게이션 --- */
+        /* --- 네비게이션 --- (기존 유지) */
         .navbar {
             position: fixed; top: 0; width: 100%;
             background-color: rgba(255, 255, 255, 0.8);
@@ -47,7 +49,26 @@
             white-space: nowrap;
         }
 
-        /* 모바일 대응 */
+        /* --- 공통 섹션 헤더 스타일 (수정 및 통일) --- */
+        .section-header {
+            padding: 100px 24px 60px; /* 상하 여백 조정 */
+            text-align: center;
+            background-color: var(--header-bg); /* 검은색 배경 통일 */
+            color: var(--header-text); /* 흰색 텍스트 통일 */
+        }
+        .section-header h2 {
+            font-size: 42px; /* 글씨 크기 통일 */
+            font-weight: 700; /* 볼드체 적용 */
+            margin: 0 0 15px 0;
+            letter-spacing: -1px;
+        }
+        .section-header p {
+            font-size: 18px; /* 보조 문구 크기 통일 */
+            opacity: 0.8;
+            margin: 0;
+        }
+
+        /* 모바일 대응 (기존 유지) */
         @media (max-width: 768px) {
             .nav-container { height: 60px; padding: 0 10px; }
             .logo-img { height: 28px; margin-right: 5px; }
@@ -66,7 +87,7 @@
         .page.active { display: block; }
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
-        /* --- [HOME] --- */
+        /* --- [HOME] --- (기존 유지) */
         .hero {
             padding: 160px 24px; text-align: center;
             background: radial-gradient(circle at center, #ffffff 0%, #f2f2f2 100%);
@@ -79,8 +100,6 @@
         .typing-text::after { content: '|'; animation: blink 0.7s infinite; }
         @keyframes blink { from, to { opacity: 1; } 50% { opacity: 0; } }
         .hero p { font-size: clamp(18px, 3vw, 24px); color: var(--text-sub); max-width: 800px; margin: 0 auto 50px; }
-
-        .section-header { padding: 100px 24px 60px; text-align: center; background-color: #1d1d1f; color: #fff; }
 
         /* --- [TEAM] --- */
         .team-container { max-width: 1100px; margin: 80px auto; padding: 0 24px; }
@@ -96,7 +115,7 @@
         .product-card { background: #fff; border-radius: 30px; padding: 50px; border: 1px solid #efefef; transition: 0.3s; display: flex; flex-direction: column; }
         .product-img-box { width: 100%; height: 320px; background: #f5f5f7; border-radius: 20px; margin: 30px 0; display: flex; align-items: center; justify-content: center; color: #ccc; font-weight: bold; }
 
-        /* --- [BUY & PAYMENT] --- */
+        /* --- [BUY & PAYMENT] --- (기존 유지) */
         .buy-container { max-width: 1100px; margin: 60px auto; display: flex; flex-wrap: wrap; gap: 50px; padding: 0 24px; }
         .buy-form { background: #fbfbfd; padding: 40px; border-radius: 24px; border: 1px solid #e5e5e5; flex: 1; min-width: 320px; }
         .pay-method-grid { display: grid; grid-template-columns: 1fr; gap: 12px; margin-top: 20px; }
@@ -104,7 +123,7 @@
         .pay-btn img { height: 20px; margin-right: 8px; }
         .pay-btn:hover { filter: brightness(0.85); transform: translateY(-2px); box-shadow: 0 5px 15px rgba(0,0,0,0.1); }
 
-        /* --- [RECEIPT] --- */
+        /* --- [RECEIPT] --- (기존 유지) */
         .receipt-card { max-width: 500px; margin: 60px auto; background: #fff; padding: 40px; border-radius: 24px; border: 1px solid #eee; box-shadow: 0 10px 30px rgba(0,0,0,0.05); }
         .receipt-line { display: flex; justify-content: space-between; margin-bottom: 12px; border-bottom: 1px dashed #eee; padding-bottom: 4px; }
 
@@ -152,8 +171,8 @@
 
     <main id="team" class="page">
         <header class="section-header">
-            <h2 style="font-size: 42px;">Leadership</h2>
-            <p style="opacity: 0.8;">공용 공간의 신뢰를 혁신하는 핵심 임원진입니다.</p>
+            <h2>Leadership</h2>
+            <p>공용 공간의 신뢰를 혁신하는 핵심 임원진입니다.</p>
         </header>
         <section class="team-container">
             <div class="ceo-card">
@@ -186,7 +205,10 @@
     </main>
 
     <main id="product" class="page">
-        <header class="section-header"><h2>Lineup</h2><p>공용 냉장고 환경에 특화된 고성능 보안 제품</p></header>
+        <header class="section-header">
+            <h2>Lineup</h2>
+            <p>공용 냉장고 환경에 특화된 고성능 보안 제품</p>
+        </header>
         <section class="product-grid">
             <div class="product-card">
                 <h4 style="color:var(--primary-color); margin-bottom: 5px;">Personal</h4>
