--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>공마고의 도둑들 | Refrigerator Security</title>
+    <title>공마고의 도둑들</title>
     <style>
         :root {
             --primary-color: #0071e3;
@@ -154,8 +154,8 @@
     <main id="home" class="page active">
         <header class="hero">
             <div class="typing-container"><span class="typing-text" id="typewriter"></span></div>
-            <p>공용 냉장고 무단 취식, 더 이상 감정에 호소하지 마세요.<br><b>공마고의 도둑들</b>의 정밀 보안 하드웨어가 완벽한 해답을 제시합니다.</p>
-            <a onclick="showPage('product')" class="cta-button">제품 라인업 확인</a>
+            <p>공용 냉장고 무단 취식, 더 이상 감정에 호소하지 마세요.<br><b>공마고의 도둑들</b>이 완벽한 보안을 제공합니다.</p>
+            <a onclick="showPage('product')" class="cta-button">지금 시작하기</a>
         </header>
         <section style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); max-width: 1100px; margin: 0 auto; padding: 80px 24px; gap: 30px;">
             <div style="padding: 40px; border-radius: 24px; background: #fbfbfd; border: 1px solid #eee;">
@@ -163,7 +163,7 @@
                 <p>기숙사생들의 스트레스 1위 냉장고 절도, 설치 즉시 분쟁을 해결합니다.</p>
             </div>
             <div style="padding: 40px; border-radius: 24px; background: #fbfbfd; border: 1px solid #eee;">
-                <h3>Office Solution</h3>
+                <h3>Office Edition</h3>
                 <p>탕비실 냉장고 에티켓 관리, 기술로 건강하고 신뢰 있는 문화를 만듭니다.</p>
             </div>
         </section>
@@ -171,15 +171,15 @@
 
     <main id="team" class="page">
         <header class="section-header">
-            <h2>Leadership</h2>
-            <p>공용 공간의 신뢰를 혁신하는 핵심 임원진입니다.</p>
+            <h2>Leading the Future</h2>
+            <p>공용 공간의 신뢰를 기술로 새롭게 정의하는 팀입니다.</p>
         </header>
         <section class="team-container">
             <div class="ceo-card">
                 <div class="profile-initial">윤</div>
                 <span style="color:var(--primary-color); font-weight:700;">CEO & Founder</span>
                 <h3 style="font-size: 32px; margin: 10px 0;">윤수원</h3>
-                <p style="color:var(--text-main); font-size: 18px; font-weight: 600; margin-bottom: 20px;">"의심이 필요 없는 일상을 설계합니다."</p>
+                <p style="color:var(--text-main); font-size: 18px; font-weight: 600; margin-bottom: 20px;">"작은 불편을 해결하는 것이 더 나은 문화를 만든다고 믿습니다."</p>
             </div>
             <div class="executive-grid">
                 <div class="member-card">
@@ -198,7 +198,7 @@
                     <div class="member-initial">이</div>
                     <div class="member-name">이지후</div>
                     <div class="member-role" style="color:var(--primary-color); font-weight:600; font-size:14px;">CFO & CMO</div>
-                    <p style="font-size: 14px; color: var(--text-sub); margin-top: 15px;">재무 회계 및 전략 및 마케팅 총괄</p>
+                    <p style="font-size: 14px; color: var(--text-sub); margin-top: 15px;">재무 회계 및 하드웨어 제작 총괄</p>
                 </div>
             </div>
         </section>
@@ -206,22 +206,22 @@
 
     <main id="product" class="page">
         <header class="section-header">
-            <h2>Lineup</h2>
-            <p>공용 냉장고 환경에 특화된 고성능 보안 제품</p>
+            <h2>Choose Your Plan</h2>
+            <p>필요한 만큼, 확실한 보호를 선택하세요.</p>
         </header>
         <section class="product-grid">
             <div class="product-card">
-                <h4 style="color:var(--primary-color); margin-bottom: 5px;">Personal</h4>
-                <h3 style="font-size: 28px; margin-top: 0;">Fridge-Eye Mini</h3>
-                <p>냉장고 선반에 자석으로 부착하는 초소형 4K 카메라 모듈입니다.</p>
+                <h4 style="color:var(--primary-color); margin-bottom: 5px;">Dormitory Edition</h4>
+                <h3 style="font-size: 28px; margin-top: 0;">SRC-04</h3>
+                <p>냉장고에 설치하는 초소형 카메라 모듈.</br>촬영된 사진은 즉시 클라우드에 저장되며, 언제 어디서나 확인 가능합니다.</p>
                 <div class="product-img-box">[ 제품 이미지 ]</div>
                 <button onclick="showPage('buy')" class="cta-button">제품 구매하기</button>
             </div>
             <div class="product-card" style="background-color: #fafafa; border-style: dashed; opacity: 0.6;">
-                <h4 style="color:var(--text-sub); margin-bottom: 5px;">Enterprise</h4>
-                <h3 style="font-size: 28px; margin-top: 0; color: #86868b;">Smart Door-Lock</h3>
-                <p style="color: #a1a1a6;">사원증 인식 시스템 연동을 테스트 중입니다.</p>
-                <div class="product-img-box" style="opacity: 0.5;">[ 개발 중 ]</div>
+                <h4 style="color:var(--text-sub); margin-bottom: 5px;">Office Edition</h4>
+                <h3 style="font-size: 28px; margin-top: 0; color: #86868b;">SRC-04 For Office</h3>
+                <p style="color: #a1a1a6;">사원증 및 얼굴 인식 기능이 추가된 제품.</br>더 많은 기능의 관리자 페이지와 우수한 보안의 로그 서버를 제공합니다.</p>
+                <div class="product-img-box" style="opacity: 1;">[ 개발 중 ]</div>
                 <button class="cta-button" style="background-color: #ccc; cursor: default;">준비 중</button>
             </div>
         </section>
@@ -232,7 +232,7 @@
 			<div style="flex: 1; min-width: 320px;">
 				<h2>주문서 작성</h2>
 				<div style="background: #fff; padding: 25px; border-radius: 12px; border: 1px solid #eee; margin-top: 20px;">
-					<p style="font-weight:700;">Fridge-Eye Mini (Personal)</p>
+					<p style="font-weight:700;">SRC-04</p>
 					<p style="font-size: 16px; color: var(--text-sub); margin: 0 0 5px 0; text-decoration: line-through;">149,900원</p>
 					<p style="font-size: 28px; font-weight: 800; color: var(--primary-color); margin: 0;">89,000원</p>
 					</div>
@@ -240,10 +240,10 @@
 			<div class="buy-form">
 				<h3 style="margin-top:0;">배송 정보</h3>
 				<form onsubmit="goToPayment(event)">
-					<input type="text" id="buyer_name" placeholder="성함" style="width:100%; padding:14px; margin-bottom:10px; border:1px solid #ddd; border-radius:8px; box-sizing: border-box;" required>
-					<input type="text" id="buyer_tel" placeholder="연락처" style="width:100%; padding:14px; margin-bottom:10px; border:1px solid #ddd; border-radius:8px; box-sizing: border-box;" required>
-					<input type="text" id="buyer_addr" placeholder="배송지 주소" style="width:100%; padding:14px; margin-bottom:20px; border:1px solid #ddd; border-radius:8px; box-sizing: border-box;" required>
-					<button type="submit" class="cta-button" style="width: 100%;">결제 수단 선택하기</button>
+					<input type="text" id="buyer_name" placeholder="수령인" style="width:100%; padding:14px; margin-bottom:10px; border:1px solid #ddd; border-radius:8px; box-sizing: border-box;" required>
+					<input type="text" id="buyer_tel" placeholder="연락처 ( - 를 제외하고 입력 )" style="width:100%; padding:14px; margin-bottom:10px; border:1px solid #ddd; border-radius:8px; box-sizing: border-box;" required>
+					<input type="text" id="buyer_addr" placeholder="배송지" style="width:100%; padding:14px; margin-bottom:20px; border:1px solid #ddd; border-radius:8px; box-sizing: border-box;" required>
+					<button type="submit" class="cta-button" style="width: 100%;">결제하기</button>
 				</form>
 			</div>
 		</div>
@@ -251,7 +251,7 @@
 
     <main id="payment" class="page">
         <div style="max-width: 500px; margin: 60px auto; padding: 0 20px; text-align: center;">
-            <h2 style="font-size: 32px;">결제 수단</h2>
+            <h2 style="font-size: 32px;">결제 수단을 선택하세요.</h2>
             <div class="pay-method-grid">
                 <button class="pay-btn naver-pay" style="background: #000000; border-color: #000000; color: #00d25a;" onclick="completeOrder('네이버페이')">
                     <img src="https://image.fnnews.com/resource/media/image/2024/01/13/202401132030029565_l.jpg" alt="네이버페이"> 네이버페이
@@ -265,7 +265,7 @@
                 <button class="pay-btn" onclick="completeOrder('신용카드')">💳 신용/체크카드</button>
                 <button class="pay-btn" onclick="completeOrder('무통장입금')">🏦 무통장 입금</button>
             </div>
-            <button class="cta-button" style="width:auto; background:none; border:none; color:var(--text-sub); text-decoration:underline; font-size:16px; margin-top:20px;" onclick="showPage('buy')">뒤로가기</button>
+            <button class="cta-button" style="width:auto; background:none; border:none; color:var(--text-sub); text-decoration:underline; font-size:16px; margin-top:20px;" onclick="showPage('buy')">배송 정보 수정하기</button>
         </div>
     </main>
 
@@ -273,7 +273,7 @@
         <div class="receipt-card">
             <h2 style="text-align: center; color: var(--primary-color); margin-bottom: 30px;">주문이 완료되었습니다!</h2>
             <div class="receipt-line"><span>주문 번호</span><b id="rec_no"></b></div>
-            <div class="receipt-line"><span>상품명</span><b>Fridge-Eye Mini</b></div>
+            <div class="receipt-line"><span>상품명</span><b>SRC-04</b></div>
             <div class="receipt-line"><span>수령인</span><span id="rec_name"></span></div>
             <div class="receipt-line"><span>배송지</span><span id="rec_addr"></span></div>
             <div class="receipt-line"><span>결제 수단</span><span id="rec_method"></span></div>
@@ -284,12 +284,12 @@
 
     <main id="contact" class="page">
         <div style="max-width: 900px; margin: 80px auto; padding: 60px 24px; text-align: center; border-radius: 40px; background-color: #f5f5f7;">
-            <h2 style="font-size: 38px;">Partnership</h2>
-            <p style="font-size: 18px; margin-bottom: 40px; color: var(--text-sub);">"서로 믿을 수 있는 공용 공간의 문화를 설계합니다."</p>
+            <h2 style="font-size: 38px;">Talk to Us</h2>
+            <p style="font-size: 18px; margin-bottom: 40px; color: var(--text-sub);">"공마고의 도둑들은 공용 공간의 문화를 설계합니다."</p>
             <div style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
                 <div style="background: #fff; padding: 30px; border-radius: 20px; flex: 1; min-width: 250px; border: 1px solid #eee;">
-                    <p style="font-weight: bold; color: var(--primary-color);">이메일 문의</p>
-                    <p style="font-size: 18px; font-weight: 600;">sales@gjmst-thives.com</p>
+                    <p style="font-weight: bold; color: var(--primary-color);">사업 문의</p>
+                    <p style="font-size: 18px; font-weight: 600;">business@gjmst-thives.com</p>
                 </div>
                 <div style="background: #fff; padding: 30px; border-radius: 20px; flex: 1; min-width: 250px; border: 1px solid #eee;">
                     <p style="font-weight: bold; color: var(--primary-color);">고객 센터</p>
@@ -302,7 +302,7 @@
     <footer class="footer">
         <div class="footer-content">
             <p><b>(주)공마고의 도둑들</b> | 대표이사: 윤수원</p>
-            <p>충청남도 공주시 유구읍 중앙1길 27-12 | contact@gjmst-thives.com</p>
+            <p>충청남도 공주시 유구읍 중앙1길 27-12 1학년 1반 | contact@gjmst-thives.com</p>
             <p style="margin-top: 20px;">Copyright © 2025 The Gjmst Thieves. All rights reserved.</p>
         </div>
     </footer>
