--- a/index.html
+++ b/index.html
@@ -254,10 +254,10 @@
             <h2 style="font-size: 32px;">결제 수단을 선택하세요.</h2>
             <div class="pay-method-grid">
                 <button class="pay-btn naver-pay" style="background: #000000; border-color: #000000; color: #00d25a;" onclick="completeOrder('네이버페이')">
-                    <img src="https://image.fnnews.com/resource/media/image/2024/01/13/202401132030029565_l.jpg" alt="네이버페이"> 네이버페이
+                    <img src="npay.jpg" alt="네이버페이"> 네이버페이
                 </button>
                 <button class="pay-btn" style="background: #fee500; border-color: #fee500;" onclick="completeOrder('카카오페이')">
-                    <img src="https://i.namu.wiki/i/DRTBUHA314XYTx-pkzY4XSmQ0Job0j10vQhiETotjLCGUULQemriSC67Yh9UCsYq7Dw7WyvK0GkP9f3jP8r8gA.svg" alt="카카오페이"> 카카오페이
+                    <img src="kpay.svg" alt="카카오페이"> 카카오페이
                 </button>
                 <button class="pay-btn" style="border-color: #d2d2d7;" onclick="completeOrder('토스페이')">
                     <img src="toss.png" alt="토스페이" onerror="this.style.display='none'"> 토스페이
