--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 <button class="pay-btn naver-pay" style="background: #000000; border-color: #000000; color: #00d25a;" onclick="completeOrder('네이버페이')">
                     <img src="npay.jpg" alt="네이버페이"> 네이버페이
                 </button>
-                <button class="pay-btn" style="background: #fee500; border-color: #ffe000;" onclick="completeOrder('카카오페이')">
+                <button class="pay-btn" style="background: #ffe000; border-color: #ffe000;" onclick="completeOrder('카카오페이')">
                     <img src="kpay.svg" alt="카카오페이"> 카카오페이
                 </button>
                 <button class="pay-btn" style="border-color: #d2d2d7;" onclick="completeOrder('토스페이')">
