--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 <button class="pay-btn" style="border-color: #d2d2d7;" onclick="completeOrder('토스페이')">
                     <img src="toss.png" alt="토스페이" onerror="this.style.display='none'"> 토스페이
                 </button>
-                <button class="pay-btn" onclick="completeOrder('신용카드')">💳 신용/체크카드</button>
+                <button class="pay-btn" onclick="completeOrder('신용/체크카드')">💳 신용/체크카드</button>
                 <button class="pay-btn" onclick="completeOrder('무통장입금')">🏦 무통장 입금</button>
             </div>
             <button class="cta-button" style="width:auto; background:none; border:none; color:var(--text-sub); text-decoration:underline; font-size:16px; margin-top:20px;" onclick="showPage('buy')">배송 정보 수정하기</button>
