--- a/index.html
+++ b/index.html
@@ -132,6 +132,54 @@
 
         .footer { background-color: var(--bg-light); padding: 80px 24px; border-top: 1px solid #e5e5e5; }
         .footer-content { max-width: 1100px; margin: 0 auto; color: var(--text-sub); font-size: 13px; }
+
+		/* --- [PARTNER LOGO SECTION] --- */
+        .partner-section {
+            padding: 60px 24px 80px;
+            background-color: #ffffff; /* 흰색 배경 */
+            text-align: center;
+            border-top: 1px solid #f5f5f7; /* 은은한 구분선 */
+        }
+
+        .partner-title {
+            font-size: 14px;
+            font-weight: 600;
+            color: #86868b;
+            letter-spacing: 0.5px;
+            text-transform: uppercase;
+            margin-bottom: 40px;
+        }
+
+        .logo-grid {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 40px 60px; /* 로고 간격 (세로, 가로) */
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+
+        .partner-logo {
+            height: 35px; /* 로고 높이 통일 */
+            width: auto;
+            opacity: 0.4; /* 평소엔 흐리게 */
+            filter: grayscale(100%); /* 평소엔 흑백 */
+            transition: all 0.3s ease;
+            cursor: pointer;
+        }
+
+        .partner-logo:hover {
+            opacity: 1; /* 마우스 올리면 선명하게 */
+            filter: grayscale(0%); /* 마우스 올리면 컬러 */
+            transform: scale(1.05); /* 살짝 커지는 효과 */
+        }
+
+        /* 모바일 대응 */
+        @media (max-width: 768px) {
+            .logo-grid { gap: 30px 40px; }
+            .partner-logo { height: 28px; }
+        }
     </style>
 </head>
 <body>
@@ -298,7 +346,16 @@
             </div>
         </div>
     </main>
-
+	<section class="partner-section">
+        <p class="partner-title">Trusted by Innovative Companies</p>
+        <div class="logo-grid">
+            <img src="https://placehold.co/150x50/transparent/black?text=Samsung" alt="Samsung" class="partner-logo">
+            <img src="https://placehold.co/150x50/transparent/black?text=Google" alt="Google" class="partner-logo">
+            <img src="https://placehold.co/150x50/transparent/black?text=Apple" alt="Apple" class="partner-logo">
+            <img src="https://placehold.co/150x50/transparent/black?text=Amazon" alt="Amazon" class="partner-logo">
+            <img src="https://placehold.co/150x50/transparent/black?text=Microsoft" alt="Microsoft" class="partner-logo">
+        </div>
+    </section>
     <footer class="footer">
         <div class="footer-content">
             <p><b>(주)공마고의 도둑들</b> | 대표이사: 윤수원</p>
