--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div onclick="showPage('home')" class="logo-area">
-                <img src="icon.png" alt="Logo" class="logo-img" onerror="this.style.backgroundColor='#0071e3'; this.style.width='50px'; this.style.borderRadius='10px';">
+                <img src="images/icon.png" alt="Logo" class="logo-img" onerror="this.style.backgroundColor='#0071e3'; this.style.width='50px'; this.style.borderRadius='10px';">
                 <span class="logo-text">공마고의 도둑들</span>
             </div>
             <div class="nav-menu">
@@ -302,13 +302,13 @@
             <h2 style="font-size: 32px;">결제 수단을 선택하세요.</h2>
             <div class="pay-method-grid">
                 <button class="pay-btn naver-pay" style="background: #000000; border-color: #000000; color: #00d25a;" onclick="completeOrder('네이버페이')">
-                    <img src="npay.jpg" alt="네이버페이"> 네이버페이
+                    <img src="images/npay.jpg" alt="네이버페이"> 네이버페이
                 </button>
                 <button class="pay-btn" style="background: #ffe000; border-color: #ffe000;" onclick="completeOrder('카카오페이')">
-                    <img src="kpay.svg" alt="카카오페이"> 카카오페이
+                    <img src="images/kpay.svg" alt="카카오페이"> 카카오페이
                 </button>
                 <button class="pay-btn" style="border-color: #d2d2d7;" onclick="completeOrder('토스페이')">
-                    <img src="toss.png" alt="토스페이" onerror="this.style.display='none'"> 토스페이
+                    <img src="images/toss.png" alt="토스페이" onerror="this.style.display='none'"> 토스페이
                 </button>
                 <button class="pay-btn" onclick="completeOrder('신용/체크카드')">💳 신용/체크카드</button>
                 <button class="pay-btn" onclick="completeOrder('무통장입금')">🏦 무통장 입금</button>
@@ -349,11 +349,11 @@
 	<section class="partner-section">
         <p class="partner-title">Trusted by Innovative Companies</p>
         <div class="logo-grid">
-            <img src="https://placehold.co/150x50/transparent/black?text=Samsung" alt="Samsung" class="partner-logo">
-            <img src="https://placehold.co/150x50/transparent/black?text=Google" alt="Google" class="partner-logo">
-            <img src="https://placehold.co/150x50/transparent/black?text=Apple" alt="Apple" class="partner-logo">
-            <img src="https://placehold.co/150x50/transparent/black?text=Amazon" alt="Amazon" class="partner-logo">
-            <img src="https://placehold.co/150x50/transparent/black?text=Microsoft" alt="Microsoft" class="partner-logo">
+            <img src="images/gjmst.svg" alt="Gjmst" class="partner-logo">
+			<img src="images/aws.png" alt="Amazon" class="partner-logo">
+            <img src="images/samsung.svg" alt="Samsung" class="partner-logo">
+            <img src="images/toss.png" alt="Toss" class="partner-logo">
+            <img src="images/tesla.png" alt="Tesla" class="partner-logo">
         </div>
     </section>
     <footer class="footer">
